2006-03-16  Paul J Stevens <paul@nfg.nl>

	* dbmail-message.c:
	fix segfault
	* misc.c:
	fix false positive error
	* dbmail-imapsession.c, dbmail-imapsession.h:
	make filtered stream persistent

2006-03-15  Paul J Stevens <paul@nfg.nl>

	* imapd.c, lmtpd.c, pop3d.c, server.c, timsieved.c:
	read config before freopen on file descriptors, and bail out in case
	of failure
	* db.c, misc.c:
	escape query in nochildren code (closes: #314)

2006-03-14  Paul J Stevens <paul@nfg.nl>

	* ChangeLog, check_dbmail_imapd.c, dbmail-message.c, misc.c:
	fix date_sql2imap
	* dbmail-mailbox.c:
	ignore charset in searching mailbox

2006-03-11  Paul J Stevens <paul@nfg.nl>

	* ChangeLog, configure.in, dbmail.h.in:
	partial fix of autoconf

2006-03-10  Paul J Stevens <paul@nfg.nl>

	* configure.in, dbmail-message.c, debian/patches/00list, debug.c, debug.h, 
	  dsn.c, dsn.h, imap4.c, lmtp.c, main.c, misc.c, pop3.c, timsieve.c:
	resync
	* db.c:
	wrap imap append in transaction (closes: #312)
	* dbmail-imapsession.c, imapcommands.c:
	make imap expunge deal with empty mailboxes
	* config.c, dbmail.conf, dbmail.h.in, dbmailtypes.h, imapd.c, lmtpd.c, 
	  pop3d.c, server.c, server.h, timsieved.c:
	make logfiles and pid-directory configurable
	* debian/changelog, modules/authldap.c, pool.c:
	minor cleanups

2006-03-07  Aaron Stone  <aaron@serendipity.cx>

	* misc.h, misc.c:
	Added dm_shellesc to escaped potentially unsafe shell chars.
	* pipe.c:
	Use dm_shellesc before calling popen(sendmail_command).
	* lmtp.c:
	Allow | (pipe) in the validchars. If it gets into an email address,
	and that address is used when calling sendmail, we'll be ready.

2006-03-06  Aaron Stone  <aaron@serendipity.cx>

	* debug.h, debug.c:
	Removed TRACE_STOP, moved TRACE_MESSAGE to be less-serious than
	TRACE_WARNING.
	* db.c, dbmail-message.c, main.c:
	Removed references to TRACE_STOP.
	* dbmail.conf:
	Changed description of TRACE_SYSLOG config item.
	* acl.c, db.c, dbmail-imapsession.c: