@@ -1,3 +1,14 @@
+2006-03-16  Aaron Stone  <aaron@serendipity.cx>
+
+	* mime.h, mime.c:
+	Cut back to one function: find_deliver_to_header_addresses that will
+	pull up a single header value and search for email addresses in it.
+	* main.c:
+	Got rid of calls to the other functions in mime.c.
+	* db.c:
+	Deleted db_get_main_header because it relied upon structs from mime.h.
+	Adapted patch from bug #314.
+
 2006-03-16  Paul J Stevens <paul@nfg.nl>
 
 	* dbmail-message.c:
